force-app/main/default/objects/Snag__c/fields/Problem_Type__c.field-meta.xml
<CustomField>
    <fullName>Problem_Type__c</fullName>
    <label>Problem Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Civil Work Issues</fullName>
            </value>
            <value>
                <fullName>Painting Issues</fullName>
            </value>
            <value>
                <fullName>Carpentry Issues</fullName>
            </value>
            <value>
                <fullName>Electrical Issues</fullName>
            </value>
            <value>
                <fullName>Plumbing Issues</fullName>
            </value>
            <value>
                <fullName>Flooring/Tiling Issues</fullName>
            </value>
            <value>
                <fullName>False Ceiling Issues</fullName>
            </value>
            <value>
                <fullName>Sanitaryware Fittings Issues</fullName>
            </value>
            <value>
                <fullName>Door &amp; Window Alignment Issues</fullName>
            </value>
            <value>
                <fullName>Water Leakage/Seepage Issues</fullName>
            </value>
            <value>
                <fullName>Hardware Fittings Issues</fullName>
            </value>
            <value>
                <fullName>Glass/Glazing Issues</fullName>
            </value>
            <value>
                <fullName>Masonry/Plaster Issues</fullName>
            </value>
            <value>
                <fullName>Wall Cracks/Settlement Issues</fullName>
            </value>
            <value>
                <fullName>Balcony/Handrail Issues</fullName>
            </value>
            <value>
                <fullName>Staircase/Common Area Issues</fullName>
            </value>
            <value>
                <fullName>Lift Lobby/Service Area Issues</fullName>
            </value>
            <value>
                <fullName>Exterior/Facade Issues</fullName>
            </value>
            <value>
                <fullName>Terrace/Waterproofing Issues</fullName>
            </value>
            <value>
                <fullName>Ventilation/Exhaust Issues</fullName>
            </value>
            <value>
                <fullName>Fire Safety Compliance Issues</fullName>
            </value>
            <value>
                <fullName>Cleaning/Finishing Issues</fullName>
            </value>
            <value>
                <fullName>Fixture Installation Issues</fullName>
            </value>
            <value>
                <fullName>Labeling/Signage Issues</fullName>
            </value>
            <value>
                <fullName>General Maintenance Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>