force-app/main/default/objects/Snag__c/fields/Snag_Status__c.field-meta.xml
<CustomField>
    <fullName>Snag_Status__c</fullName>
    <label>Snag Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Review</fullName>
                <default>true</default>
                <label>Pending Review</label>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>